force-app/main/default/objects/Proposal_Process__e/Proposal_Process__e.object-meta.xml
<CustomObject>
    <label>Proposal Process</label>
    <pluralLabel>Proposal Process</pluralLabel>
</CustomObject>