force-app/main/default/objects/Proposal_Process__e/fields/ARR2__c.field-meta.xml
<CustomField>
    <fullName>ARR2__c</fullName>
    <label>ARR2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>