force-app/main/default/objects/Proposal_Process__e/fields/ARR3__c.field-meta.xml
<CustomField>
    <fullName>ARR3__c</fullName>
    <label>ARR3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>