force-app/main/default/objects/Proposal_Process__e/fields/ARR__c.field-meta.xml
<CustomField>
    <fullName>ARR__c</fullName>
    <label>ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>