force-app/main/default/objects/Proposal_Process__e/fields/Cycle_price_2__c.field-meta.xml
<CustomField>
    <fullName>Cycle_price_2__c</fullName>
    <label>Cycle price 2</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>