force-app/main/default/objects/Proposal_Process__e/fields/Cycle_Price__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Price__c</fullName>
    <label>Cycle Price</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>