force-app/main/default/objects/Proposal_Process__e/fields/Cycle_Secondary_Base_Product_Option__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Secondary_Base_Product_Option__c</fullName>
    <label>Cycle - Secondary Base Product Option</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>