force-app/main/default/objects/Proposal_Process__e/fields/Cycle_Third_Base_Product_Option__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Third_Base_Product_Option__c</fullName>
    <label>Cycle - Third Base Product Option</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>