force-app/main/default/objects/Proposal_Process__e/fields/Discount_amount__c.field-meta.xml
<CustomField>
    <fullName>Discount_amount__c</fullName>
    <label>Discount Amount</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>