force-app/main/default/objects/Proposal_Process__e/fields/Discount_Amount_cycle_2__c.field-meta.xml
<CustomField>
    <fullName>Discount_Amount_cycle_2__c</fullName>
    <label>Discount Amount cycle 2</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>