force-app/main/default/objects/Proposal_Process__e/fields/Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner__c</fullName>
    <label>Opportunity Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>