force-app/main/default/objects/Proposal_Process__e/fields/Primary_use_case__c.field-meta.xml
<CustomField>
    <fullName>Primary_use_case__c</fullName>
    <label>Primary use case</label>
    <length>255</length>
    <type>Text</type>
</CustomField>