force-app/main/default/objects/Proposal_Process__e/fields/Product_sold_Base_product__c.field-meta.xml
<CustomField>
    <fullName>Product_sold_Base_product__c</fullName>
    <label>Product sold - Base product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>