force-app/main/default/objects/Proposal_Process__e/fields/Proposal_after_2_weeks__c.field-meta.xml
<CustomField>
    <fullName>Proposal_after_2_weeks__c</fullName>
    <label>Proposal after 2 weeks</label>
    <type>Date</type>
</CustomField>