force-app/main/default/objects/Proposal_Process__e/fields/Proposal_send_date__c.field-meta.xml
<CustomField>
    <fullName>Proposal_send_date__c</fullName>
    <label>Proposal send date</label>
    <type>Date</type>
</CustomField>