force-app/main/default/objects/Proposal_Process__e/fields/Secondary_Base_Product_Option__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Base_Product_Option__c</fullName>
    <label>Secondary Base Product Option</label>
    <length>255</length>
    <type>Text</type>
</CustomField>