force-app/main/default/objects/Proposal_Process__e/fields/Secondary_use_case__c.field-meta.xml
<CustomField>
    <fullName>Secondary_use_case__c</fullName>
    <label>Secondary use case</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>