force-app/main/default/objects/Proposal_Process__e/fields/Third_Base_Product_Option__c.field-meta.xml
<CustomField>
    <fullName>Third_Base_Product_Option__c</fullName>
    <label>Third Base Product Option</label>
    <length>255</length>
    <type>Text</type>
</CustomField>